# fasta_split

./: README.md
fasta_split/: Cargo.toml  README.md
fasta_split/src/: main.rs  main.rs.ok
