[package]
name = "fasta_split"
version = "0.1.0"
edition = "2021"
authors = ["Simon Penel <simon.penel@univ-lyon1.fr>"]
description = "Split a fasta file into several fasta files"
readme = "README.md"
license-file = "LICENSE"
keywords = ["bioinformatics", "fasta"]
[dependencies]
bio = "1.5.0"
bio-types = "1.0.0"
clap = { version = "4.0.29", features = ["derive"] }

